# hdotfiles

./: .gitignore  .hlint.yaml  .travis.yml  LICENSE  Makefile  README.md  default.nix  hdotfiles.cabal  hdotfiles.nix  package.yaml  shell.nix  stack.yaml
app/: Main.hs
src/: Dotfiles.hs
src/Dotfiles/: Commands.hs  Config.hs  Utils.hs
test/: DotfilesSpec.hs  Spec.hs  SpecHelper.hs
test/Dotfiles/: CommandsSpec.hs  ConfigSpec.hs  UtilsSpec.hs
tests/: DotfilesSpec.hs  SpecHelper.hs
tests/Dotfiles/: CommandsSpec.hs  ConfigSpec.hs  UtilsSpec.hs
