name:                hdotfiles
version:             0.3.0.0
synopsis:            Simple dotfiles management tool
description:         Simple dotfiles management tool
homepage:            http://github.com/ilya-yurtaev/hdotfiles#readme
license:             MIT
license-file:        LICENSE
author:              Ilya Yurtaev
maintainer:          ilya.yurtaev@gmail.com
copyright:           2015 Ilya Yurtaev
category:            Dotfiles
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dotfiles
                     , Dotfiles.Commands
                     , Dotfiles.Config
                     , Dotfiles.Utils
                     , Paths_hdotfiles

  build-depends:       base >= 4.7 && < 5
                     , MissingH
                     , containers
                     , directory
                     , filepath
                     , process
                     , transformers
                     , unix
                     , yaml

  default-language:    Haskell2010

  ghc-options:         -Wall

executable dotfiles
  hs-source-dirs:      app

  main-is:             Main.hs

  ghc-options:         -Wall
                       -threaded

  build-depends:       base >= 4.7 && < 5
                     , hdotfiles

  default-language:    Haskell2010

test-suite hdotfiles-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       DotfilesSpec
                     , Dotfiles.CommandsSpec
                     , Dotfiles.ConfigSpec
                     , Dotfiles.UtilsSpec

  build-depends:       base >= 4.7 && < 5
                     , containers
                     , directory
                     , filepath
                     , hdotfiles
                     , hspec >= 2.1
                     , temporary >= 1.2.0.4
                     , transformers
                     , unix

  ghc-options:         -Wall
                       -threaded

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ilya-yurtaev/hdotfiles